<resources>
    <string name="checked_in">Checked In</string>
    <string name="checked_out">Checked Out</string>
    <string name="check_in">Check In</string>
    <string name="event_title">Event Title</string>
    <string name="tickets_sold">Tickets Sold</string>
    <string name="to"> To </string>
    <string name="comma"> , </string>
    <string name="divide">/</string>
    <string name="attendance">Attendance</string>
    <string name="scan_qr_code">Scan QR COde</string>
    <string name="first_name">First Name (Optional)</string>
    <string name="last_name">Last Name (Optional)</string>
    <string name="email">Email</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="update">Update</string>
    <string name="thumbnail_image">Thumbnail Image URL</string>
    <string name="icon_image_url">Icon Image URL</string>
    <string name="facebook_url">Facebook URL</string>
    <string name="instagram_url">Instagram URL</string>
    <string name="avatar_url">Avatar URL</string>
    <string name="twitter_url">Twitter URL</string>
    <string name="google_plus_url">Google Plus URL</string>
    <string name="password">Password</string>
    <string name="base_url">Base URL</string>
    <string name="login">Log In</string>
    <string name="rating">rating</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_link"><u>Sign Up For Open Event</u></string>
    <string name="login_link"><u>Already have an account? Log In</u></string>
    <string name="scan_the_barcode">Scan the BarCode</string>
    <string name="event_title_here">Event Title Here</string>
    <string name="title_feedbacks">Feedbacks</string>
    <string name="feedback">Feedback</string>
    <string name="forgot_password_link">I forgot my password</string>
    <string name="speaker_details">Speaker Details</string>
    <string name="date_placeholder">May 25th 2017</string>
    <string name="date_placeholder_2">May 31th 2017</string>
    <string name="hour_placeholder">1300</string>
    <string name="tickets_amount_placeholder">0</string>
    <string name="attendance_placeholder">0/0</string>
    <string name="last_name_placeholder">Smith</string>
    <string name="first_name_placeholder">John</string>
    <string name="email_placeholder">johh.doe@gmail.com</string>
    <string name="logout">Logout</string>
    <string name="at">\@</string>
    <string name="title_activity_event_container">EventContainerActivity</string>
    <string name="title_details">Dashboard</string>
    <string name="title_attendees">Attendees</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_event_list">Events</string>
    <string name="title_event_detail">Event Detail</string>
    <string name="subtitle_organizer">Organizer: %s</string>
    <string name="event_thumbnail">Event Thumbnail</string>
    <string name="text_empty">Nothing to show here</string>
    <string name="empty_view_icon">Empty View Icon</string>
    <string name="event_summary">Event Summary</string>
    <string name="event_state_publish">Publish</string>
    <string name="event_state_draft">Draft</string>
    <string name="gross_sales">Gross Sales</string>
    <string name="sales_summary">Sales Summary</string>
    <string name="refresh_complete">Refresh Complete</string>
    <string name="search_title">Search</string>
    <string name="search_placeholder">Search Attendees</string>
    <string name="tickets">Tickets</string>
    <string name="ticket_free">Free</string>
    <string name="ticket_paid">Paid</string>
    <string name="ticket_donation">Donation</string>
    <string name="logout_confirmation">Log Out</string>
    <string name="logout_confirmation_message">Are you sure you want to log out?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="check_in_status">Check In Status</string>
    <string name="dashboard">Dashboard</string>
    <string name="attendees">Attendees</string>
    <string name="events">Events</string>
    <string name="nav_events">My Events</string>
    <string name="log_out">Log Out</string>
    <string name="device_settings">Device Settings</string>
    <string name="event_background">Event Background</string>
    <string name="create_ticket">Create Ticket</string>
    <string name="ticket_name">Ticket Name</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="sale_start_time">Sale start time</string>
    <string name="sale_end_time">Sale end time</string>
    <string name="starts_at">Starts at:</string>
    <string name="ends_at">Ends at:</string>
    <string name="pick">Pick :</string>
    <string name="minOrder">Minimum Order</string>
    <string name="maxOrder">Maximum Order</string>
    <string name="about">About</string>
    <string name="title_activity_about_event">AboutEventActivity</string>
    <string name="details">Details</string>
    <string name="title_activity_organizer_detail">OrganizerDetailActivity</string>
    <string name="verified">Verified</string>
    <string name="not_verified">Not Verified</string>
    <string name="contact">Contact</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="filter">filter</string>
    <string name="filter_by_sync">Pending Sync</string>
    <string name="filter_by_none">None</string>
    <string name="publish_success">Your Event is published successfully.</string>
    <string name="draft_success">Your Event is unpublished successfully.</string>
    <string name="request_token">Request Token</string>
    <string name="back_to_login">Back To Login</string>
    <string name="reset_password">Reset Password</string>
    <string name="resend_token">Didn\'t receive token? Resend</string>
    <string name="token">Token</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="create_event">Create Event</string>
    <string name="event_name">Event Name</string>
    <string name="payment_currency">Payment Currency</string>
    <string name="ticket">Ticket</string>
    <string name="date_and_time">Date and Time</string>
    <string name="timezone">Timezone</string>
    <string name="location_details">Location Details</string>
    <string name="show_map">Show Map</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="location_name">Location Name</string>
    <string name="searchable_location_name">Searchable Location Name</string>
    <string name="ticketing_details">Ticketing Details</string>
    <string name="use_ticketing_system">Use Ticketing System</string>
    <string name="ticket_url">Ticket Url</string>
    <string name="organizer_details">Organizer Details</string>
    <string name="add_organizer_information">Add Organizer Information</string>
    <string name="organizer_name">Organizer Name</string>
    <string name="organizer_description">Organizer Description</string>
    <string name="listing_privacy">Listing Privacy</string>
    <string name="public_event">Public event</string>
    <string name="private_event">Private event</string>
    <string name="speakers_and_sponsors">Speakers and Sponsors</string>
    <string name="enable_session_speakers">Enable Session Speakers</string>
    <string name="enable_sponsors">Enable Sponsors</string>
    <string name="payment_details">Payment Details</string>
    <string name="payment_country">Payment Country</string>
    <string name="payment_methods">Payment Methods</string>
    <string name="payment_by_paypal">Payment By PayPal</string>
    <string name="accept_payment_through_paypal">Accept Payment through PayPal</string>
    <string name="paypal_email">Paypal Email</string>
    <string name="payment_by_stripe">Payment By Stripe</string>
    <string name="accept_payment_through_stripe">Accept Payment through Stripe</string>
    <string name="offline_payments">Offline Payments</string>
    <string name="accept_payment_by_cheque">Accept Payment By Cheque</string>
    <string name="enter_your_cheque_details">Enter your Cheque Details</string>
    <string name="accept_payment_by_bank_transfer">Accept Payment By Bank Transfer</string>
    <string name="enter_your_bank_details">Enter your Bank Details</string>
    <string name="enter_your_onsite_details">Enter your onsite details</string>
    <string name="accept_payment_at_the_event_onsite">Accept Payment at the event site</string>
    <string name="graphics">Graphics</string>
    <string name="logo_url">Logo Url</string>
    <string name="original_image_url">Original Image Url</string>
    <string name="event_state">Event State</string>
    <string name="published">Published</string>
    <string name="draft">Draft</string>
    <string name="others">Others</string>
    <string name="description">Description</string>
    <string name="external_event_url">External Event Url</string>
    <string name="code_of_conduct">Code of Conduct</string>
    <string name="enable_tax">Enable Tax</string>
    <string name="url_validation_error">Please Enter a Valid URL</string>
    <string name="email_validation_error">Please Enter a Valid Email</string>
    <string name="event_statistics">Event Statistics</string>
    <string name="speakers">Speakers</string>
    <string name="sponsors">Sponsors</string>
    <string name="create_sponsor">Create Sponsor</string>
    <string name="update_sponsor">Update Sponsor</string>
    <string name="sponsor_name">Sponsor Name</string>
    <string name="sponsor_description">Description</string>
    <string name="sponsor_url">URL</string>
    <string name="sponsor_logo_url">Logo URL</string>
    <string name="sponsor_level">Level</string>
    <string name="sponsor_type">Type</string>
    <string name="sessions">Sessions</string>
    <string name="sort_by">Sort By</string>
    <string name="sort_by_name">Name</string>
    <string name="sort_by_date">Date</string>
    <string name="sessions_submitted">Sessions Submitted</string>
    <string name="sessions_accepted">Sessions Accepted</string>
    <string name="sessions_confirmed">Sessions Confirmed</string>
    <string name="sessions_draft">Sessions Draft</string>
    <string name="sessions_pending">Sessions Pending</string>
    <string name="faq">FAQ</string>
    <string name="track">Track</string>
    <string name="tracks">Tracks</string>
    <string name="pdf_url">PDF URL</string>
    <string name="country">Country</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="address">Address</string>
    <string name="pdf_url_colon">PDF URL:  </string>
    <string name="answer_initial">A:</string>
    <string name="question_initial">Q:</string>
    <string name="create_copyright">Create Copyright</string>
    <string name="edit_copyright">Edit Copyright</string>
    <string name="edit_track">Edit Track</string>
    <string name="holder_name">Holder Name</string>
    <string name="holder_url">Holder URL</string>
    <string name="license_text">License Text</string>
    <string name="license_url">License URL</string>
    <string name="copyright_year">Year</string>
    <string name="copyright">Copyright</string>
    <string name="create_faq">Create FAQ</string>
    <string name="question">Question</string>
    <string name="answer">Answer</string>
    <string name="pick_from_map">Pick from Map</string>
    <string name="save_icon">Save Icon</string>
    <string name="use_date_time_picker">Use Picker</string>
    <string name="welcome">Let\'s get started</string>
    <string name="delete_copyright">Delete Copyright</string>
</resources>